# LearnSeries

series/#10/: 1.fs  2.fs  3.fs  Dir.txt
series/#11/: AST.fs  Runtime.hpp  Token.hpp  dir.txt  hello.fs  main.cpp
series/#12/: 1.fs  2.fs  3.fs  4.fs  CMakeLists.txt  Dir.txt
series/#15/: 1.fs  2.fs  3.fs  4.fs  AST.txt  cmake.txt  eval.txt
series/#5/: 10.fs  2.fs  3.fs  4.fs  5.fs  6.fs  7.fs  8.fs  9.fs
series/#6/: #6.fs
series/#8/: dir.fs
series/#8/ForgeLang/: CMakeLists.txt  cli.txt
series/#8/ForgeLang/src/core/: CMakeLists.txt
series/#8/ForgeLang/src/lexer/: CMakeLists.tx
series/#8/ForgeLang/src/main/: CMakelists.txt
series/#8/ForgeLang/tests/: CMakeLists.txt
series/#9/: CMakeLists.txt  arc.txt
src/core/: src.core.fs
src/lexer/: src.lexer.fs
src/main/: src.main.fs
src/parser/: src.parser.fs
src/runtime/: src.runtime.fs
src/semantics/: src.semantics.fs
src/stdlib/: src.stdlib.fs
src/vm/: src.vm.fs
